# yt_thumbnail_collector

./: .gitignore  main.py  pyproject.toml
tests/: test_thumbnail_collector.py
thumbnail_collector/: __init__.py  collect_thumbnails.py  fetch_id.py
